# py-URD

./: .gitignore  AUDIT.md  DISCOVERY.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
data/: candidate_output.json  fixture_guo_expression.csv  manifest.yaml  reference_output.json
examples/: compare_R_vs_Python.ipynb  evolution.ipynb  function_by_function_R_parity.ipynb  tutorial_guo.ipynb  visualization_R_parity.ipynb
pyurd/: __init__.py  flood.py  plotting.py  random_walk.py  urd.py
tests/: _run_candidate.py  py_plot_driver.py  r_plot_driver.R  r_reference_driver.R  test_exact_match.py  test_smoke.py
tests/plot_compare/: pseudotime.csv
